// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Share Post Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while finding post.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Share Post Controller Snapshot Test for not valid post Id. 1`] = `
{
  "body": {
    "message": "Invalid postID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Share Post Controller Snapshot Test for post Id not found. 1`] = `
{
  "body": {
    "message": "Oops! post ID is not found.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Share Post Controller Snapshot Test for post article found successfully. 1`] = `
{
  "body": {
    "data": {
      "_id": "69a8652b69726b384c21b27d",
      "author": undefined,
      "comments": 12,
      "createdAt": "2026-03-04T17:00:19.599Z",
      "deletedAt": null,
      "description": "postDescription",
      "isPinned": false,
      "isTrashed": false,
      "likes": 924,
      "title": "postTitle",
      "updatedAt": "2026-03-04T17:00:19.599Z",
    },
    "message": "Post article found successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Share Post Controller Snapshot Test for post article not found. 1`] = `
{
  "body": {
    "message": "Posted article not found.",
    "success": false,
  },
  "status": 404,
}
`;
